--- a/module5/networking/Jenkinsfile
+++ b/module5/networking/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
         TF_IN_AUTOMATION = "true"
         PATH = "$TF_HOME:$PATH"
         DYNAMODB_STATELOCK = "ddt-tfstatelock"
-        NETWORKING_BUCKET = "ddt-networking"
+        NETWORKING_BUCKET = "ddt-networking-ya"
         NETWORKING_ACCESS_KEY = credentials('networking_access_key')
         NETWORKING_SECRET_KEY = credentials('networking_secret_key')
     }
